src/objects/Apttus_Config2__PriceListCategory__c.object
<CustomObject>
    <description>Represents the categories associated with a price list</description>
    <fields>
        <fullName>Apttus_Config2__HierarchyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the category  associated with the price list</description>
        <label>Hierarchy</label>
        <referenceTo>Apttus_Config2__ClassificationName__c</referenceTo>
        <relationshipLabel>Price Lists</relationshipLabel>
        <relationshipName>PriceLists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceListId__c</fullName>
        <description>ID of the associated price list</description>
        <label>Price List</label>
        <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
        <relationshipLabel>Categories</relationshipLabel>
        <relationshipName>Categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>Represents the sequence number of the category.</description>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <description>LC-8998: Used to perform data migration</description>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Migration_Key_Generator__c</fullName>
        <description>LC-8998: Used for master data key generation</description>
        <displayFormat>PLC-{00000}</displayFormat>
        <label>Migration Key Generator</label>
        <type>AutoNumber</type>
    </fields>
    <label>Price List Category</label>
    <nameField>
        <displayFormat>PL-{0000000000}</displayFormat>
        <label>Entry Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price List Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>